@@ -7,9 +7,9 @@
     .tools{ hidden, :id => dom_id(pending, :tools) }
       %small
         = link_to("Edit", task_path(pending)) << " | "
-        = link_to_remote("Delete!", :url => task_path(pending), :method => :delete, :before => visual_effect(:highlight, dom_id(pending), :startcolor => "#afeeee"))
+        = remote_delete(pending, bucket)
       &nbsp;
-    = check_box_tag :complete, 1, false, :onclick => complete(pending, bucket)
+    = check_box_tag :complete, 1, false, :onclick => remote_complete(pending, bucket)
     %label{ :id => dom_id(pending, :name) }
       - if pending.user.id != @current_user.id
         == From #{link_to(pending.user.full_name, "mailto:" + pending.user.email)}:
