@@ -23,7 +23,7 @@
   require "faker"
   category = %w(call email folowup lunch meeting money presentation trip) << ""
 
-  for i in (1 .. 150) do
+  for i in (1 .. 250) do
     due_at = case rand(12)
       when 1                            # ASAP
         Task::ASAP.to_s(:db)
@@ -37,15 +37,15 @@
 %>
 task<%= i %>:
   id           : <%= i %>
-  user_id      : <%= rand(5) + 1 %>
-  assigned_to  : <%= rand(5) == 0 ? rand(5) + 1 : "" %>
+  user_id      : <%= rand(7) + 1 %>
+  assigned_to  : <%= rand(4) == 0 ? rand(5) + 1 : "" %>
   name         : <%= Faker::Lorem::sentence(rand(2) + 2).sub(".", "") %>
   asset_id     : <%=  %>
   asset_type   : <%=  %>
   priority     :
   category     : <%= category[rand(category.size)] %>
   due_at       : <%= due_at %>
-  completed_at : <%= rand(5) == 0 ? Date.today - rand(5).days : "" %>
+  completed_at : <%= rand(4) == 0 ? Date.today - rand(5).days : "" %>
   deleted_at   :
   created_at   : <%= starts = Date.today - rand(15).days %>
   updated_at   : <%= starts + rand(5).days %>
